Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/064_procedure_used_as_function_ifelsecond.xi
f()

g()
{
    if f() {
    } else {
    }
}
//@PRACOWNIA
//@should_not_typecheck
